...
      "max": {
        "type": "num",
        "format": "compact"
      }
    }
  },
  "boulderArea": "Secteur",
  "boulderAreas": "Secteurs",
  "boulders": "Blocs",
  "changeStyleMap": "Modifier le style de la carte",
  "checkYourConnection": "Vérifiez votre connexion internet et essayez à nouveau",
  "clear": "Effacer",
  "closeTheGallery": "Fermer la galerie d'images",
  "closeTheModal": "Fermer la boîte de dialogue",
  "description": "Description",
  "displayFirst": "Afficher en 1er:",
  "distributionOfBoulders": "Répartition des blocs",
  "distributionOfNBoulders": "Répartition des {num} blocs",
  "@distributionOfNBoulders": {
    "placeholders": {
      "num": {
...
        "format": "compact"
      }
    }
  },
  "login": "Se connecter",
  "logout": "Se déconnecter",
  "map": "Carte",
  "max": "max",
  "minGrade": "Cotation min",
  "moreThanNMeters": "Plus de {value}m",
  "@moreThanNMeters": {
    "placeholders": {
      "value": {
...
        "format": "compact"
      }
    }
  },
  "municipalities": "Communes",
  "municipality": "Commune",
  "myProfile": "Mon profil",
  "nBoulders": "{count, plural, =1{bloc} other{blocs}}",
  "@nBoulders": {
    "placeholders": {
      "count": {
        "type": "num",
        "format": "compact"
...
