import 'package:breizh_blok_mobile/iri_parser.dart';
import 'package:breizh_blok_mobile/models/boulder.dart';
import 'package:breizh_blok_mobile/models/request_strategy.dart';
import 'package:breizh_blok_mobile/ui/widgets/bb_map_launcher_button.dart';
import 'package:breizh_blok_mobile/ui/widgets/boulder_details_associated.dart';
import 'package:breizh_blok_mobile/ui/widgets/boulder_details_line_boulders.dart';
import 'package:breizh_blok_mobile/ui/widgets/boulder_item_map.dart';
import 'package:flutter/material.dart';
import 'package:flutter_bloc/flutter_bloc.dart';
import 'package:flutter_gen/gen_l10n/app_localizations.dart';
import 'package:go_router/go_router.dart';

class BoulderDetails extends StatelessWidget {
  const BoulderDetails({
    required this.boulder,
    super.key,
  });

  final Boulder boulder;

  @override
  Widget build(BuildContext context) {
    final grade = boulder.grade;
    final description = boulder.description;
    final offlineFirst = context.read<RequestStrategy>().offlineFirst;

    return Padding(
      padding: const EdgeInsets.fromLTRB(10, 0, 10, 10),
      child: ListView(
        key: const Key('boulder-details-list-view'),
        shrinkWrap: true,
        children: [
          Stack(
            children: [
              BoulderDetailsLineBoulders(lineBoulders: boulder.lineBoulders),
            ],
          ),
          if (description != null)
            ListTile(
              title: Text(description),
              leading: Text(AppLocalizations.of(context).description),
            ),
          if (grade != null)
            ListTile(
              title: Text(grade.name),
              leading: Text(AppLocalizations.of(context).grade),
            ),
          ListTile(
            title: Text(boulder.rock.boulderArea.municipality.name),
            leading: Text(AppLocalizations.of(context).municipality),
            key: const Key('municipality-details-link'),
            onTap: offlineFirst
                ? null
                : () {
                    context.pushNamed(
                      'municipality_details',
                      pathParameters: {
                        'id': IriParser.id(
                          boulder.rock.boulderArea.municipality.iri,
                        ),
                      },
                    );
                  },
          ),
          ListTile(
            title: Text(boulder.rock.boulderArea.name),
            leading: Text(AppLocalizations.of(context).boulderArea),
            key: const Key('boulder-area-details-link'),
            onTap: () {
              final routeName = offlineFirst
                  ? 'downloaded_boulder_area_details'
                  : 'boulder_area_details';
              context.pushNamed(
                routeName,
                pathParameters: {
                  'id': IriParser.id(boulder.rock.boulderArea.iri),
                },
              );
            },
          ),
          Padding(
            padding: const EdgeInsets.symmetric(vertical: 8),
            child: Center(
              child: BbMapLauncherButton(
                destination: boulder.rock.location,
                destinationTitle:
                    // ignore: lines_longer_than_80_chars
                    '${boulder.name}${boulder.grade != null ? ', ${boulder.grade?.name}' : ''}',
              ),
            ),
          ),
          SizedBox(
            height: 300,
            child: BoulderItemMap(boulder: boulder),
          ),
          const SizedBox(
            height: 20,
          ),
          BoulderDetailsAssociated(boulder: boulder),
          const SizedBox(
            height: 20,
          ),
        ],
      ),
    );
  }
}
