...
          _pagingController.refresh,
        ),
        child: SafeArea(
          child: Stack(
            children: [
              PagedListView.separated(
                key: const Key('boulder-list-builder-list-view'),
                pagingController: _pagingController,
                scrollController: _scrollController,
                padding: const EdgeInsets.only(
                  bottom: 16,
                  left: 10,
                  right: 10,
...
                                if (widget.showFilterButton)
                                  const BbBoulderListBuilderFilterButton(),
                                Expanded(
                                  child: Padding(
                                    padding: const EdgeInsets.only(right: 8),
                                    child: BbBoulderListBuilderResults(
                                      key: const Key('boulder-list-result'),
                                      totalItems:
                                          _bloc.state.data?.totalItems ?? 0,
                                    ),
                                  ),
                                ),
                              ],
...
